# ghostdrop

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  build_and_deploy.sh  demo.html  index.html  package-lock.json  package.json  setup.sh  vite.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
logos-ghostdrop-module/: CMakeLists.txt  ghostdrop_module_interface.h  ghostdrop_module_plugin.cpp  ghostdrop_module_plugin.h  metadata.json
logos-ghostdrop-module/src/: CryptoService.cpp  CryptoService.h  GhostDropCore.cpp  GhostDropCore.h  NetworkService.cpp  NetworkService.h  StripService.cpp  StripService.h
logos-ghostdrop-ui/: CMakeLists.txt  GhostDropBridge.cpp  GhostDropBridge.h  GhostDropUIComponent.cpp  GhostDropUIComponent.h  metadata.json
logos-ghostdrop-ui/src/: GhostDropRoot.qml
logos-ghostdrop-ui/src/components/: Components.qml
logos-ghostdrop-ui/src/views/: OutletView.qml  ReaderView.qml  SourceView.qml
src/: App.jsx
src/components/: CodexStatus.jsx  NomosStatus.jsx  ui.jsx
src/services/: codex.js  crypto.js  nomos.js  strip.js  transport.js  waku.js
src/utils/: useCodex.js  useWaku.js
src/views/: OutletView.jsx  ReaderView.jsx  SourceView.jsx
